--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: echo "variable ${{ vars.LOG_FORMAT }}"
     - run: npm install
     - run: npm run test
