--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker login -u ${{ secrets.DOCKERUSER }} -p ${{ secrets.DOCKERPASSWORD }}
-      run: docker build . --file Dockerfile --tag practica-ci:$(date +%s)
-      run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
-      run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
+    - run: docker login -u ${{ secrets.DOCKERUSER }} -p ${{ secrets.DOCKERPASSWORD }}
+    - run: docker build . --file Dockerfile --tag practica-ci:$(date +%s)
+    - run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
+    - run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
