--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image and publish
-      - run: docker login -u ${{ secrets.DOCKERUSER }} -p ${{ secrets.DOCKERPASSWORD }}
-      - run: docker build . --file Dockerfile --tag practica-ci:$(date +%s)
-      - run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
-      - run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
+      - name: Docker Login
+        run: docker login -u ${{ secrets.DOCKERUSER }} -p ${{ secrets.DOCKERPASSWORD }}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag practica-ci:$(date +%s)
+      - name: Generate Docker Tag
+        run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
