--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Docker Login
         run: docker login -u ${{ secrets.DOCKERUSER }} -p ${{ secrets.DOCKERPASSWORD }}
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag practica-ci:$(date +%s)
+        run: docker build . --file Dockerfile --tag practica-ci-server
       - name: Generate Docker Tag
         run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:latest
       - name: Push Docker Image
