--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -23,7 +23,7 @@ jobs:
       uses: redhat-actions/oc-login@v1
       env:
         OPENSHIFT_USER: ${{ secrets.OPENSHIFT_USER }}
-        OPENSHIFT_NAMESPACE: namespace
+        OPENSHIFT_NAMESPACE: pau7rr-dev
       with:
         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER }}
         openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
