--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Delete actual service
       run: kubectl delete services practica-ci-service
     - name: Deploy new version
-      run: kubectl apply -f deployment.yaml
+      run: kubectl apply -f ./deployment.yaml
