--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -32,4 +32,4 @@ jobs:
 
     - name: Deploy new version
       uses: actions/checkout@v3
-      run: kubectl apply -f ./deployment.yaml
+    - run: kubectl apply -f ./deployment.yaml
