--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,18 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_run:
+    workflows: ["Integration Test CI"]
+    branches: [main]
+    types: 
+      - completed
 
 jobs:
 
   build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: develop
     runs-on: ubuntu-latest
 
