--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,11 +1,15 @@
 name: Integration Test CI
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["Test CI"]
+    branches: [main]
+    types: 
+      - completed
 
 jobs:
   test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: develop
     runs-on: ubuntu-latest
 
