--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -2,7 +2,7 @@ name: Kubernetes deploy
 
 on:
   workflow_run:
-    workflows: ["Docker Image CI", "Test CI", "Integration Test CI"]
+    workflows: ["Docker Image CI"]
     branches: [main]
     types: 
       - completed
@@ -10,6 +10,7 @@ on:
 jobs:
 
   build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: develop
     runs-on: ubuntu-latest
 
