--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,17 @@
 name: Test CI
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["Build CI"]
+    branches: [main]
+    types: 
+      - completed
   pull_request:
     branches: [ "main" ]
 
 jobs:
   test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'pull_request' }}
     environment: develop
     runs-on: ubuntu-latest
 
