--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag practica-ci-server
       - name: Generate Docker Tag
-        run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:${$GITHUB_REF##*/}
+        run: docker tag practica-ci-server ${{ secrets.DOCKERUSER }}/practica-ci-server:${GITHUB_REF##*/}
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:${$GITHUB_REF##*/}
+        run: docker push ${{ secrets.DOCKERUSER }}/practica-ci-server:${GITHUB_REF##*/}
