--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,9 @@ jobs:
         && echo "ORIGIN=${{ vars.ORIGIN }}" >> .env.production.local \
         && echo "CREDENTIALS=${{ vars.CREDENTIALS }}" >> .env.production.local
 
-    - run: echo ${{ github.event.pull_request.base.ref }}
+    - run: echo ${{ github.event }}
+    - run: echo ${{ github.pull_request }}
+    - run: echo ${{ github.event.push }}
     - run: npm install
     - run: npm run build
 
