--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,11 @@ jobs:
         && echo "ORIGIN=${{ vars.ORIGIN }}" >> .env.production.local \
         && echo "CREDENTIALS=${{ vars.CREDENTIALS }}" >> .env.production.local
 
-    - run: export LATESTLOG=$(git log -1 --pretty=%B)
-    - run: export SOURCEBRANCH=$(echo $LATESTLOG | awk -F '\\\\n' '{print $1}' |  awk -F '/' '{print $2}' | awk '{print $1}')
-    - run: echo $SOURCEBRANCH
+    - run: echo ${{ github.ref }}
+    - run: echo ${{ github.head_ref }}
+    - run: echo ${{ github.ref_name }}
+    - run: echo ${{ github.base_ref }}
+    - run: echo ${{ github.action_ref }}
     - run: npm install
     - run: npm run build
 
