--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: practica-ci-container
-        image: $IMAGE
+        image: pau7rr/practica-ci-server:latest
         ports:
         - containerPort: 3000
 
